# STACCATO

./: CMakeLists.txt  README.md  readMatrix.m
cmake/modules/: FindHDF5.cmake  FindMKL.cmake  FindOCCT.cmake  FindSIMULIA.cmake  FindXSDXERCES.cmake
etc/: runWin64.bat  runWin64Test.bat  setEnv.bat
model/: .gitignore  B31_fe_X1.sim  FelgeStaticDistributing.odb.REMOVED.git-id  FelgeStaticDistributingBig.odb.REMOVED.git-id  RectangularBlockTet_coarse.odb.REMOVED.git-id  RectangularBlockTet_fine.odb.REMOVED.git-id
src/: CMakeLists.txt  STACCATOComputeEngine.cpp  STACCATOComputeEngine.h  STACCATOMainWindow.cpp  STACCATOMainWindow.h  STACCATOMainWindow.ui  main.cpp  resources.qrc  winResources.rc
src/FEPart/: FeElement.cpp  FeElement.h  FePart.cpp  FePart.h  FePlainStress4NodeElement.cpp  FePlainStress4NodeElement.h  FeTetrahedron10NodeElement.cpp  FeTetrahedron10NodeElement.h  Material.cpp  Material.h
src/Occ/: OccViewer.cpp  OccViewer.h  OcctQtProcessIndicator.cpp  OcctQtProcessIndicator.h
src/Qt/: CMakeLists.txt  ChartView.cpp  ChartView.h  ChartViewToolTip.cpp  ChartViewToolTip.h  OccView.cpp  OccView.h  OccViewer.cpp  OccViewer.h  QtProcessIndicator.cpp  QtProcessIndicator.h  RedirectStreams.h  STLVRML_DataSource.cpp  STLVRML_DataSource.h  SignalDataVisualizer.cpp  SignalDataVisualizer.h  StartWindow.cpp  StartWindow.h  StartWindow.ui  VisualizerWindow.cpp  VisualizerWindow.h  mainWindow.cpp  mainWindow.h  mainWindow.ui  occView.cpp  qnemainwindow.cpp
src/Qt/resources/: CMakeLists.txt
src/ROMPart/: CMakeLists.txt  FeUmaElement.cpp  FeUmaElement.h
src/Vtk/: AnimationCueObserver.h  AnimationScene.h  CMakeLists.txt  CueAnimator.h  DiscreteVisualizer.cpp  DiscreteVisualizer.h  FieldDataSetting.h  FieldDataVisualizer.cpp  FieldDataVisualizer.h  HMeshToVtkUnstructuredGrid.cpp  HMeshToVtkUnstructuredGrid.h  STACCATO_Visualizer_Enum.h  SurfaceSetting.h  SurfaceWithEdgesSetting.cpp  SurfaceWithEdgesSetting.h  VisualizerSetting.cpp  VisualizerSetting.h  VisualizerSettingObserver.h  VisualizerSettingSubject.h  VtkAnimator.cpp  VtkAnimator.h  VtkViewer.cpp  VtkViewer.h  WireframeSetting.cpp  WireframeSetting.h  observer.h
src/analysis/: BoundaryCondition.cpp  BoundaryCondition.h  FeAnalysis.cpp  FeAnalysis.h  FeAnalysisStatic.cpp  FeAnalysisStatic.h  FeAnalysisSteadyStateDirect.cpp  FeAnalysisSteadyStateDirect.h  KrylovROMSubstructure.cpp  KrylovROMSubstructure.h
src/assembly/: Assembly.cpp  Assembly.h
src/database/: IP_STACCATO_XML.cxx  IP_STACCATO_XML.hxx  MetaDatabase.cpp  MetaDatabase.h  OutputDatabase.cpp  OutputDatabase.h  Results.cpp  Results.h  ScalarFieldResults.cpp  ScalarFieldResults.h  VectorFieldResults.cpp  VectorFieldResults.h
src/datastructure/: HMesh.cpp  HMesh.h  HMeshToMeshVS_DataSource.cpp  HMeshToMeshVS_DataSource.h  STACCATO_Enum.h
src/feAnalysis/: BoundaryCondition.cpp  BoundaryCondition.h  FEAnalysis.cpp  FeAnalysis.cpp  FeAnalysis.h  FeElement.cpp  FeElement.h  FeMetaDatabase.cpp  FeMetaDatabase.h  FeTetrahedron10NodeElement.cpp  FeUmaElement.cpp  Material.cpp  Material.h
src/fileIO/: FileFOM.cpp  FileFOM.h  FileROM.cpp  FileROM.h  FileResults.cpp  FileResults.h  ReadWriteFile.cpp  ReadWriteFile.h  Reader.cpp  Reader.h  SimuliaODB.cpp  SimuliaODB.h  SimuliaUMA.cpp  SimuliaUMA.h
src/interface/: CMakeLists.txt  FieldDataSetting.cpp  SurfaceSetting.cpp  WireframeSetting.cpp  WireframeSetting.h  subject.h
src/logging/: Message.cpp  Message.h  MessageToC.cpp  MessageToC.h  Timer.cpp  Timer.h
src/metaDatabase/: CMakeLists.txt  IP_STACCATO_XML.cxx  IP_STACCATO_XML.hxx  MetaDatabase.cpp  MetaDatabase.h
src/tools/: AuxiliaryFunctions.cpp  AuxiliaryFunctions.h  AuxiliaryParameters.cpp  AuxiliaryParameters.cpp.in  AuxiliaryParameters.h  MathLibrary.cpp  MathLibrary.h  MemWatcher.cpp  MemWatcher.h  MklRedefine.c  STACCATO_Enum.h
srcPerformanceTest/: .gitignore  CMakeLists.txt  README.md  checkSolution_60.m  main.cpp
srcPerformanceTest/config/: config.cpp  config.hpp
srcPerformanceTest/data/: dataStructure.cpp  dataStructure.hpp
srcPerformanceTest/helper/: Timer.cpp  Timer.hpp
srcPerformanceTest/io/: CMakeLists.txt  io.cpp
srcPerformanceTest/solver/: assembly.cpp  assembly.hpp
test/IJCSA/: .gitignore  Makefile
test/IJCSA/src/: IJSA.cu
test/IJCSA/src/config/: config.cu  config.cuh
test/IJCSA/src/data/: dataStructures.cu  dataStructures.cuh
test/IJCSA/src/helper/: Timer.cu  Timer.cuh  helper.cuh
test/IJCSA/src/io/: io.cu  io.cuh
test/IJCSA/src/solver/: assembly.cu  assembly.cuh
test/basicOCCT-QT5Example/: CMakeLists.txt
test/basicOCCT-QT5Example/src/: main.cpp
test/basicOCCT-QT5Example/src/Qt/: OccViewer.cpp  OccViewer.h  StartWindow.cpp  StartWindow.h
test/basicQT5Example/: CMakeLists.txt
test/basicQT5Example/src/: CMakeLists.txt  main.cpp  mainwindow.ui
test/basicSIMULIAExample/: CMakeLists.txt
test/basicSIMULIAExample/src/: CMakeLists.txt  main.cpp
test/krylovMidsizeTest/cpu/src/: main.cpp
test/krylovMidsizeTest/gpu/src/: main.cu
test/krylovTestGPU/: .gitignore  Makefile  timeMeasurements.txt
test/krylovTestGPU/cpu/: Makefile  krylovCPU.REMOVED.git-id
test/krylovTestGPU/matrixInSeparateLoop/: timeMeasurements.txt
test/krylovTestGPU/matrixInSingleLoop/: timeMeasurements.txt
test/krylovTestGPU/src/: main.cu
test/matlabSupport/: errorCheck.m  main_ErrorComparison_AbaqusAndSTACCATOExport.m  readAbaqusFieldOut.m  readCSR.m  readSTACCATOExport.m  readVector.m  verifyStaccatoExports.m
test/matlabSupport/Misc_Functions/: readAbaqusHistoryForTransferFunctions.m  readStaccatoSeriesMtx.m  readStaccatoTransferFunctionDatToMatlab.m  transferFunction_Abaqus.m
test/matlabSupport/SIM_Test/: import_staccato_mtx.m  main.m  mapStaccatoSolutionMapToAbaqusMap.m  readUMA_MAP.m
test/matlabSupport/importHDF5/: importHDF5sysMatsSparse.m  readHDF5CSR.m  readHfromHDF5.m
test/pythonExeExample/: generateExe.bat  main.py
xsd/: IP_STACCATO_XML.xml  IP_STACCATO_XML.xsd  IP_STACCATO_XML_B31_fe.xml  IP_STACCATO_XML_RectangularBlockTet.xml  IP_STACCATO_XML_UMA_Felge.xml
xsd/ROM_Tests/: IP_STACCATO_XML_BeamMOR.xml
(+104 files in other folders)
